src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  /* --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e; */

  /* #ff2e2e */
  --ifm-color-primary: #ff2e2e;
  --ifm-color-primary-dark: #ff1010;
  --ifm-color-primary-darker: #ff0101;
  --ifm-color-primary-darkest: #d30000;
  --ifm-color-primary-light: #ff4c4c;
  --ifm-color-primary-lighter: #ff5b5b;
  --ifm-color-primary-lightest: #ff8888;


  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);

  /* Colors for an example Admonition */
  --ifm-color-example-contrast-background: #e1c7ff;
  --ifm-color-example-dark: #5200af;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  /* --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf; */

  /* #ff707e */
  --ifm-color-primary: #ff707e;
  --ifm-color-primary-dark: #ff4b5d;
  --ifm-color-primary-darker: #ff394c;
  --ifm-color-primary-darkest: #ff021b;
  --ifm-color-primary-light: #ff959f;
  --ifm-color-primary-lighter: #ffa7b0;
  --ifm-color-primary-lightest: #ffdee1;


  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);

  /* Colors for an example Admonition */
  --ifm-color-example-contrast-background: #51009c;
  --ifm-color-example-dark: #cd8fff;
}

.alert--example {
  --ifm-alert-background-color: var(--ifm-color-example-contrast-background);
  --ifm-alert-background-color-highlight: rgba(0, 164, 0, 0.15);
  --ifm-alert-foreground-color: var(--ifm-color-success-contrast-foreground);
  --ifm-alert-border-color: var(--ifm-color-example-dark);
}

.centered {
  text-align: center;
}

.hidden {
  display: none !important;
}

/* Used for displaying multiple things which may overflow a single row */
.flex-row-wrap {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}


/* If you want to center all markdown tables */
table {
  display: table;
  width: initial;
  margin: 0 auto;
  margin-bottom: 1em;
}

.katex-display {
  /* This prevents long equations from exceeding the width of the page */
  overflow: auto hidden;
}

